<resources>
    <string name="app_name">Satu</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="data_mahsiswa">Data Mahsiswa</string>
    <string name="info_kuliner">Info Kuliner</string>
    <string name="info_wisata">Info Wisata</string>
    <string name="info_game">Info Game</string>
    <string name="info_katalog_produk">Info Katalog Produk</string>
    <string name="info_olahraga">Info Olahraga</string>
    <string name="info_transportasi">Info Transportasi</string>
    <string name="info_entertainment">Info Entertainment</string>
</resources>