<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_data_mahasiswa"
            android:icon="@drawable/ic_data_mahasiswa"
            android:title="@string/data_mahsiswa" />
        <item
            android:id="@+id/nav_info_kuliner"
            android:icon="@drawable/ic_kuliner"
            android:title="@string/info_kuliner" />
        <item
            android:id="@+id/nav_info_wisata"
            android:icon="@drawable/ic_wisata"
            android:title="@string/info_wisata" />
        <item
            android:id="@+id/nav_info_game"
            android:icon="@drawable/ic_game"
            android:title="@string/info_game" />
        <item
            android:id="@+id/nav_info_katalog_produk"
            android:icon="@drawable/ic_katalog_produk"
            android:title="@string/info_katalog_produk" />
        <item
            android:id="@+id/nav_info_olahraga"
            android:icon="@drawable/ic_olahraga"
            android:title="@string/info_olahraga" />
        <item
            android:id="@+id/nav_info_transportasi"
            android:icon="@drawable/ic_transportasi"
            android:title="@string/info_transportasi" />
        <item
            android:id="@+id/nav_info_entertaiment"
            android:icon="@drawable/ic_entertaiment"
            android:title="@string/info_entertainment" />
    </group>
</menu>